--- a/js-good-parts/java_support/pom.xml
+++ b/js-good-parts/java_support/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.roboprogs.jvm_with_js</groupId>
-  <artifactId>jvm_with_js</artifactId>
+  <groupId>com.roboprogs.java_support</groupId>
+  <artifactId>java_support</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>jvm_with_js</name>
+  <name>java_support</name>
   <url>http://maven.apache.org</url>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -21,7 +21,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <mainClass>
-                com.roboprogs.jvm_with_js.App
+                com.roboprogs.java_support.App
               </mainClass>
             </manifest>
           </archive>
@@ -40,7 +40,7 @@
               <archive>
                 <manifest>
                   <mainClass>
-                    com.roboprogs.jvm_with_js.App
+                    com.roboprogs.java_support.App
                   </mainClass>
                 </manifest>
               </archive>
